# nuthatch

./: .dockerignore  .gitignore  .taplo.toml  Dockerfile.test  README.md  TESTING.md  docker-compose.yml  nuthatch-global.schema.json  nuthatch.aws.docker.toml  nuthatch.azure.docker.toml  nuthatch.gcp.docker.toml  nuthatch.schema.json  pyproject.toml
.github/workflows/: test-live.yml  test.yml
docs/: CONFIG.md
examples/: readme_examples.py
src/cacheable/: backend.py  cacheable.py  config.py  metadata.py
src/cacheable/backends/: __init__.py  backend.py  basic.py  delta.py  parquet.py  pickle.py  sql.py  terracotta.py  zarr.py
src/cacheable/config/: __init__.py  dynamic_config.py
src/nuthatch/: __init__.py  backend.py  cache.py  cli.py  config.py  export_schema.py  memoizer.py  metadata.py  nuthatch.py  processor.py  secrets.py  test_secrets.py
src/nuthatch/backends/: __init__.py  basic.py  delta.py  parquet.py  sql.py  terracotta.py  zarr.py
src/nuthatch/processors/: __init__.py  timeseries.py
test_infrastructure/: .terraform.lock.hcl  aws.tf  azure.tf  azure.tf.disabled  gcp.tf  gcs.tf  terraform.tf
test_infrastructure/aws/: nuthatch-test-policy.json  setup.sh  teardown.sh
tests/: __init__.py  conftest.py  test_backend_identification.py  test_cache_args.py  test_cli.py  test_config_registration.py  test_config_resolution.py  test_core.py  test_db_metastore.py  test_delta_metastore.py  test_engines.py  test_global_filesystem.py  test_independent_storage.py  test_local.py  test_memoizer.py  test_metastore.py  test_mirror_storage.py  test_namespace.py  test_nuthatch_metastore.py  test_unused_fixture.py
tests/backends/: tabular_test.py  test_basic.py  test_delta.py  test_parquet.py  test_sql.py  test_terracotta.py  test_terracotta_alignment.py  test_zarr.py
tests/fixtures/: fake_gcs_service_account.json  nuthatch.toml
tests/fixtures/fake_ocean_lib/: pyproject.toml
tests/fixtures/fake_ocean_lib/src/fake_ocean_lib/: nuthatch.toml  sst.py
tests/fixtures/fake_weather_lib/: pyproject.toml
tests/fixtures/fake_weather_lib/src/fake_weather_lib/: forecasts.py  nuthatch.toml
tests/processors/: test_timeseries.py
