[project]
name = "nuthatch"
dynamic = ["version"]
description = "Cacheable big data pipelines"
authors = [
    { name = "Joshua Adkins", email = "josh@rhizaresearch.org" },
    { name = "Genevieve Flaspohler", email = "geneviee@rhizaresearch.org" }
]
readme = "README.md"
requires-python = ">= 3.12"
license = {text = "MIT"}

dependencies = [
    "fsspec",
    "sqlalchemy",
    "pandas",
    "dask[dataframe]",
    "deltalake==1.1.2",
    "dask-deltatable",
    "xarray",
    "pyarrow",
    "terracotta==0.8.6",
    "rioxarray",
    "gitpython",
    "psycopg2-binary",
    "zarr<3",
    "click",
    "polars",
    "dateparser",
    "tomli-w",
    "pydantic",
    "multiprocess",
    "humanfriendly",
]

# TODO: Make backend submodules so that their
# dependencies can be installed independently
[dependency-groups]
dev = [
    # Testing framework and plugins
    "pytest>=7.0.0",           # Test runner
    "pytest-cov>=4.0.0",       # Code coverage reporting
    "pytest-mock>=3.10.0",     # Mock object support for tests
    # Cloud storage filesystem interfaces (for testing with emulators)
    "s3fs",                    # Amazon S3 filesystem
    "gcsfs",                   # Google Cloud Storage filesystem
    # Utilities
    "pooch",                   # Download and cache test data files
    "google-cloud-secret-manager",  # Access secrets from GCP Secret Manager
    "dask[distributed]",
    "bokeh>=3.1.0",
    "requests",                # HTTP client for API calls
    "ruff>=0.1.0",             # Linter and code formatter
]

[project.scripts]
nuthatch = "nuthatch.cli:main"


[project.optional-dependencies]


[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
 source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/nuthatch"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
managed = true

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s.%(msecs)03d %(levelname)s %(filename)s:%(lineno)s %(message)s"
addopts = [
    "--strict-markers",
    "--cov=nuthatch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = [
]
markers = [
    "cloud: test uses cloud storage (expands to all providers)",
    "s3: test uses S3/LocalStack",
    "gcs: test uses GCS/fake-gcs-server",
]

[tool.coverage.run]
source = ["src/nuthatch"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.autopep8]
max_line_length = 120
aggressive = 0

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "space"
