[project]
name = "fake-weather-lib"
version = "0.1.0"
description = "Fake weather library for testing nuthatch config resolution"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fake_weather_lib"]
